<resources>
    <string name="app_name">Student Application</string>
    <string name="hint_firstname">First name</string>
    <string name="hint_middlename">Middle name</string>
    <string name="hint_lastname">Last name</string>
    <string name="hint_email">E-mail address</string>
    <string name="hint_classroomcode">Classroom code</string>
    <string name="hint_studentnumber">Student number</string>
    <string name="toast_unique_student_value">This is an unique data for this student and cannot be altered!</string>
    <string name="toast_classroom_invalid">The classroom code is not valid!</string>
    <string name="option_delete">Delete</string>
    <string name="option_add">Add</string>
    <string name="option_search">Search</string>
    <string name="option_mail">Send email</string>
    <string name="toast_cannot_alter_class">The student can only be added to the current classroom!</string>
    <string name="toast_cannot_edit_email">The email address is generated based on the student number!</string>
    <string name="toast_invalid_studentnumber">The given student number is not valid or already exists!</string>
    <string name="toast_missing_name">The student must have a first name!</string>
    <string name="option_cancel">Cancel</string>
    <string name="option_confirm">Confirm</string>
    <string name="create_classroom">Insert the new classroom code:</string>
    <string name="toast_cannot_create_classroom">The classroom code is not valid for the current course, or it\'s already being used!</string>
    <string name="alert_delete_classroom">Delete the whole class?</string>
    <string name="option_show_subjects_list">Show subjects list</string>
    <string name="option_add_subject">Add subject</string>
    <string name="dialog_add_subject">Enter the subject name and the grade:</string>
    <string name="hint_subject">Subject</string>
    <string name="hint_grade">Grade</string>
    <string name="toast_invalid_grade">The grade must be between 0 and 10</string>
    <string name="toast_missing_subject_name">The subject must have a name</string>
    <string name="option_analyze_grades">Analyze results</string>
    <string name="toast_invalid_subject_name">Didn\'t find any subjects for the current student</string>
    <string name="toast_subject_already_exists">The subject already exists for this student!</string>
    <string name="option_sector_graphic">Sector graphic</string>
    <string name="option_bar_graphic">Bar graphic</string>
    <string name="option_analyze_courses">Analyze courses</string>
    <string name="total_students">Total students</string>
</resources>
